--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -90,7 +90,7 @@
             </div>
         </nav>
 
-        <div class="container my-5">
+        <div class="container my-5" id="add-research-paper">
             <div class="card shadow-sm" style="border-radius: 30px; background-color: #F8F9FA;">
                 <div class="card-body">
                     <h5 class="card-title">Add a New Research Paper</h5>
