frontend: Made ground for option button on nav bar

--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../js/bootstrap.bundle.min.js"></script>
     <!-- jQuery -->
@@ -18,6 +17,7 @@
     <link rel="stylesheet" href="../css/home.css">
     <script src="../js/home.js"></script>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <title>Home Page</title>
 </head>
@@ -55,6 +55,9 @@
                 </ul>
                 <form>
                     <i class="bi bi-person-circle" id="signup-button" type="button"></i>
+                </form>
+                <form>
+                    <i class="bi bi-person-circle" style="background-color:palevioletred" id="option-button" type="button"></i>
                 </form>
             </div>
         </div>
