Frontend: Now research papers are getting from backend

--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -72,7 +72,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="researchNavbar">
-                    <ul class="navbar-nav mx-auto">
+                    <ul class="navbar-nav mx-auto" id="second-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="#research1">Research Page 1</a>
                         </li>
@@ -119,33 +119,10 @@
             </div>
         </div>
 
-        <div class="research-section">
-            <div id="research1" class="container my-5">
-                <div class="research-page position-relative">
-                    <h2>Research Page 1</h2>
-                    <p>
-                        Content for Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        an
-                        ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in auctor justo dui vitae dui..
-                    </p>
-                    <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
-                        <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton1"
-                           data-bs-toggle="dropdown" aria-expanded="false"></i>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
-                            <li><a class="dropdown-item bi bi-pen" href="#">Modify</a></li>
-                            <li><a class="dropdown-item bi bi-eye" href="#">Show/Hide</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+        <div class="research-section" id="research-paper-section">
+           
 
-            <div id="research2" class="container my-5">
+            <!--<div id="research2" class="container my-5">
                 <div class="research-page position-relative">
                     <h2>Research Page 2</h2>
                     <p>
@@ -237,7 +214,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 
