--- a/Applied Sciences Research Center Website/wwwroot/html/login.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/login.html
@@ -35,12 +35,12 @@
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email Address</label>
                                 <input type="email" class="form-control input-container" id="email" name="email"
-                                       placeholder="Your email..." required>
+                                    placeholder="Your email..." required>
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control input-container" id="password" name="password"
-                                       placeholder="Your password..." required>
+                                <input type="password" class="form-control input-container" id="password"
+                                    name="password" placeholder="Your password..." required>
                             </div>
                             <div class="d-grid">
                                 <a id="custom-button">
