contact page final

--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -56,16 +56,16 @@
                 <form>
                     <i class="bi bi-person-circle" id="signup-button" type="button"></i>
                 </form>
-                <form class="d-flex">
-                    <div class="dropdown">
+                <form>
+                    <div>
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                             data-bs-toggle="dropdown" aria-expanded="false" ">
-                            <i class=" bi bi-person-circle"></i>
+                                    <i class=" bi bi-person-circle "></i>
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+                        <ul class=" dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
                             <li><a class="dropdown-item" href="#userPanel">User Panel</a></li>
                             <li><a class="dropdown-item" href="#logout">Log Out</a></li>
-                        </ul>
+                            </ul>
                     </div>
 
                 </form>
@@ -220,47 +220,6 @@
             </div>-->
         </div>
     </div>
-
-    <!-- Contact Us Section -->
-    <section id="contact-us" class="py-5">
-        <div class="container">
-            <div class="contact-us-section">
-                <h2 class="text-center mb-4">Contact Us</h2>
-                <div class="row">
-                    <div class="col-md-6">
-                        <form>
-                            <div class="mb-3">
-                                <label for="name" class="form-label">Name</label>
-                                <input type="text" class="form-control input-container" id="name"
-                                    placeholder="Your name...">
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control input-container" id="email"
-                                    placeholder="Your email...">
-                            </div>
-                            <div class="mb-3">
-                                <label for="message" class="form-label">Message</label>
-                                <textarea class="form-control input-container" id="message" rows="5"
-                                    placeholder="Type your question..."></textarea>
-                            </div>
-                            <button type="submit" class="custom-button">
-                                Submit
-                            </button>
-                        </form>
-                    </div>
-                    <div class="col-md-6">
-                        <p>If you have any questions, feel free to reach out to us. We're here to help!</p>
-                        <ul class="list-unstyled">
-                            <li><strong>Address:</strong> 123 Main Street, City, Country</li>
-                            <li><strong>Phone:</strong> +1 234 567 890</li>
-                            <li><strong>Email:</strong> contact@ourwebsite.com</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Footer -->
     <footer class="py-4 bg-dark text-light">
