--- a/Applied Sciences Research Center Website/wwwroot/html/contact_us.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/contact_us.html
@@ -24,8 +24,6 @@
 </head>
 
 <body class="bg-secondary3-800">
-
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-first">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="color: var(--primary-dark);">Brand</a>
@@ -45,22 +43,22 @@
                         <a class="nav-link" href="#">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact_us.html">About Us</a>
+                        <a class="nav-link" href="contact_us.html">Contact Us</a>
                     </li>
                 </ul>
                 <form>
                     <i class="bi bi-person-circle" id="signup-button" type="button"></i>
                 </form>
-                <form class="d-flex">
-                    <div class="dropdown">
+                <form>
+                    <div>
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                             data-bs-toggle="dropdown" aria-expanded="false" ">
-                                <i class=" bi bi-person-circle"></i>
+                                    <i class=" bi bi-person-circle "></i>
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+                        <ul class=" dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
                             <li><a class="dropdown-item" href="#userPanel">User Panel</a></li>
                             <li><a class="dropdown-item" href="#logout">Log Out</a></li>
-                        </ul>
+                            </ul>
                     </div>
 
                 </form>
@@ -68,7 +66,6 @@
             </div>
         </div>
     </nav>
-    <!-- Hero Section -->
 
 
 
@@ -95,7 +92,7 @@
                                 <textarea class="form-control input-container" id="message" rows="5"
                                     placeholder="Type your question..."></textarea>
                             </div>
-                            <button type="submit" class="custom-button">
+                            <button type="submit" id="signup-button">
                                 Submit
                             </button>
                         </form>
@@ -120,7 +117,7 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
