--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -41,7 +41,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" id="nav-home-button">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Journal</a>
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="#">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact_us.html">Contact Us</a>
+                        <a class="nav-link" id="nav-contact-button">Contact Us</a>
                     </li>
                 </ul>
                 <form>
