--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -77,7 +77,7 @@
 
 
     <div class="content">
-        <nav class="navbar navbar-expand-lg navbar-light navbar-second sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-light sticky-top" id="navbar-second">
             <div class="container-fluid">
                 <a class="navbar-brand d-sm-block d-lg-none" href="#">Research Pages</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#researchNavbar"
