--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -86,6 +86,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="researchNavbar">
                     <ul class="navbar-nav mx-auto" id="second-nav">
+                        <!-- Getting from jQuery -->
                     </ul>
                 </div>
             </div>
@@ -123,101 +124,7 @@
         </div>
 
         <div class="research-section" id="research-paper-section">
-
-
-            <!--<div id="research2" class="container my-5">
-                <div class="research-page position-relative">
-                    <h2>Research Page 2</h2>
-                    <p>
-                        Content forResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        anteResearch Page 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in auctor justo dui vitae dui..
-                    </p>
-                    <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
-                        <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton1"
-                            data-bs-toggle="dropdown" aria-expanded="false"></i>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
-                            <li><a class="dropdown-item bi bi-pen" href="#">Modify</a></li>
-                            <li><a class="dropdown-item bi bi-eye" href="#">Show/Hide</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div id="research3" class="container my-5">
-                <div class="research-page position-relative">
-                    <h2>Research Page 3</h2>
-                    <p>
-                        Content for RResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        anch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in aesearch Page 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in auctor justo dui vitae dui..
-                    </p>
-                    <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
-                        <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton1"
-                            data-bs-toggle="dropdown" aria-expanded="false"></i>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
-                            <li><a class="dropdown-item bi bi-pen" href="#">Modify</a></li>
-                            <li><a class="dropdown-item bi bi-eye" href="#">Show/Hide</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div id="research4" class="container my-5">
-                <div class="research-page position-relative">
-                    <h2>Research Page 4</h2>
-                    <p>
-                        Content forResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        an Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in av Research Page 4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in auctor justo dui vitae dui..
-                    </p>
-                    <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
-                        <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton1"
-                            data-bs-toggle="dropdown" aria-expanded="false"></i>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
-                            <li><a class="dropdown-item bi bi-pen" href="#">Modify</a></li>
-                            <li><a class="dropdown-item bi bi-eye" href="#">Show/Hide</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div id="research5" class="container my-5">
-                <div class="research-page position-relative">
-                    <h2>Research Page 5</h2>
-                    <p>
-                        Content for Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in aResearch Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in a Research Page 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in avResearch Page 5. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel
-                        ante, in auctor justo dui vitae dui..
-                    </p>
-                    <div class="dropdown position-absolute " style="top: 10px; right: 10px;">
-                        <i class="bi bi-three-dots-vertical btn" type="button" id="dropdownMenuButton1"
-                            data-bs-toggle="dropdown" aria-expanded="false"></i>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item bi bi-trash" href="#">Delete</a></li>
-                            <li><a class="dropdown-item bi bi-pen" href="#">Modify</a></li>
-                            <li><a class="dropdown-item bi bi-eye" href="#">Show/Hide</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>-->
+            <!-- Getting from jQuery -->
         </div>
     </div>
 
