--- a/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
@@ -50,19 +50,16 @@
                     <i class="bi bi-person-circle" id="signup-button" type="button"></i>
                 </form>
                 <form>
-                    <div>
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                                data-bs-toggle="dropdown" aria-expanded="false" ">
+                    <div id="logged-in-options">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class=" bi bi-person-circle "></i>
                         </button>
                         <ul class=" dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
                             <li><a class="dropdown-item" href="#userPanel">User Panel</a></li>
-                            <li><a class="dropdown-item" href="#logout">Log Out</a></li>
+                            <li><a class="dropdown-item" id="logout-button">Log Out</a></li>
                         </ul>
                     </div>
-
                 </form>
-
             </div>
         </div>
     </nav>
