Frontend: Icons flickering resolved

--- a/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/contact-us.html
@@ -47,10 +47,10 @@
                     </li>
                 </ul>
                 <form>
-                    <i class="bi bi-person-circle" id="signup-button" type="button"></i>
+                    <i class="bi bi-person-circle" id="signup-button" type="button" hidden></i>
                 </form>
                 <form>
-                    <div id="logged-in-options">
+                    <div id="logged-in-options" hidden>
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class=" bi bi-person-circle "></i>
                         </button>
