--- a/Applied Sciences Research Center Website/wwwroot/html/index.html
+++ b/Applied Sciences Research Center Website/wwwroot/html/index.html
@@ -54,10 +54,10 @@
                     </li>
                 </ul>
                 <form>
-                    <i class="bi bi-person-circle" id="signup-button" type="button"></i>
+                    <i class="bi bi-person-circle" id="signup-button" type="button" hidden></i>
                 </form>
                 <form>
-                    <div id="logged-in-options">
+                    <div id="logged-in-options" hidden>
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class=" bi bi-person-circle "></i>
                         </button>
@@ -87,7 +87,7 @@
             </div>
         </nav>
 
-        <div class="container my-5" id="add-research-paper">
+        <div class="container my-5" id="add-research-paper" hidden>
             <div class="card shadow-sm" style="border-radius: 30px; background-color: #F8F9FA;">
                 <div class="card-body">
                     <h5 class="card-title">Add a New Research Paper</h5>
